Update beautifulsoup version, add python 3.6 to tox testing

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
-envlist = py34, py35
+envlist = py34, py35, py36
 [testenv]
 deps=
-    beautifulsoup4==4.4
+    beautifulsoup4==4.6.0
     lxml==3.6.1
     cssutils==1.0.1
 commands=python setup.py test
