Add python3 compatibility.
Made to look as much as possible to the master branch (version>1, python3 only)

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,12 @@
 [tox]
-envlist = py27
+envlist =
+    py27
+    py35
 [testenv]
 deps=
     beautifulsoup4
     lxml
-    cssutils
+    cssutils==1.0.1
+    future
+    six
 commands=python setup.py test
