remove python2 rubbish

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,6 @@
 [tox]
 envlist = py34, py35
 [testenv]
-deps=
-    beautifulsoup4==4.4
-    lxml==3.6.1
-    cssutils==1.0.1
+deps =
+    -rrequirements.txt
 commands=python setup.py test
