include noto-sans font

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
 include pycaption/english.pickle
+include pycaption/NotoSansDisplay-Regular.ttf
 recursive-exclude tests *
 include README.rst requirements.txt
