--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,9 @@
 [tox]
-envlist = py34, py35
+envlist = py35, py36, py37, py38
 [testenv]
 deps=
-    beautifulsoup4==4.4
+    beautifulsoup4==4.8.2
     lxml==3.6.1
     cssutils==1.0.1
+
 commands=python setup.py test
