--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Run test
+        id: tests
         run: python setup.py test
         continue-on-error: true
 
