--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -17,13 +17,18 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
       - name: Setup python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Run test
+
+      - name: Install Tox
+        run: pip install tox
+      - name: Run Tox
         id: tests
-        run: python setup.py test
+        # Run tox using the version of Python in `PATH`
+        run: tox -e py
         continue-on-error: true
 
       - name: Notify if test FAILED
