Added superior limit to beautifulsoup

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 envlist = py35, py36, py37, py38
 [testenv]
 deps=
-    beautifulsoup4==4.8.2
+    beautifulsoup4>=4.8.1,<4.10
     lxml==3.6.1
     cssutils==1.0.1
 
