OCTO-10161. Drop python3.5 (& prior) support and update dependencies.
* Remove the ‘future’ and ‘six’ dependencies.
* Drop support for Python 3.5.
* Modernize string formatting syntax.
* Update project’s requirements & classifiers.
* Bump version.
* Update README & documentation files.

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,11 @@
 [tox]
 requires = tox-pyenv
-envlist = py35, py36, py37, py38, py39
+envlist = py36, py37, py38, py39
+
 [testenv]
 deps=
     beautifulsoup4>=4.8.1,<4.10
-    lxml>=3.2.3
-    cssutils>=0.9.10
+    lxml>=4.6.3,<4.7
+    cssutils>=2.0.0,<2.4
 
 commands=python setup.py test
