--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,10 @@ envlist = py36, py37, py38, py39
 
 [testenv]
 deps=
+    pytest>=6.2.0,<6.3
     beautifulsoup4>=4.8.1,<4.10
     lxml>=4.6.3,<4.7
     cssutils>=2.0.0,<2.4
 
-commands=python setup.py test
+commands=
+    pytest -vvvv --junit-xml=coverage.xml
