OCTO-10158. Create ReaderTestingMixIn and use it in all formats Reader tests.

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist = py36, py37, py38, py39
 [testenv]
 deps=
     pytest>=6.2.0,<6.3
+    pytest-lazy-fixture==0.6.3
     beautifulsoup4>=4.8.1,<4.10
     lxml>=4.6.3,<4.7
     cssutils>=2.0.0,<2.4
