--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,12 @@
 
 name: Publish PyCaption to TestPyPI
 
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+    inputs:
+      version:
+        description: "Version number"
+        required: true
 
 jobs:
   call-unit-tests-workflow:
