--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -13,7 +13,7 @@ on: workflow_dispatch
 jobs:
   call-unit-tests-workflow:
     name: Run unit tests
-    uses: ana-nichifor/pycaption-test/.github/workflows/main.yml@main
+    uses: pbs/pycaption/.github/workflows/main.yml@main
 
   build-n-publish:
     name: Build and publish PyCaption to TestPyPI
