--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,11 +13,12 @@ on: workflow_dispatch
 jobs:
   call-unit-tests-workflow:
     name: Run unit tests
-    uses: pbs/pycaption/.github/workflows/main.yml@main
+    uses: ana-nichifor/pycaption-test/.github/workflows/main.yml@main
+#    uses: pbs/pycaption/.github/workflows/main.yml@main
 
   build-n-publish:
     name: Build and publish PyCaption to PyPI
-    needs: call-unit-tests-workflow
+#    needs: call-unit-tests-workflow
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -31,14 +32,14 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install build
+        python -m pip install --upgrade twine
 
     - name: Build package
       run: python -m build
       timeout-minutes: 10
 
     - name: Publish package on PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
-        verbose: true
+      run: python3 -m twine upload --repository testpypi dist/* --verbose
+      env:
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
