--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,7 @@ jobs:
       timeout-minutes: 10
 
     - name: Publish package on PyPI
-      run: python3 -m twine upload --repository testpypi dist/* --verbose
+      run: python3 -m twine upload --repository testpypi --verbose dist/*
       env:
         TWINE_USERNAME: __token__
-        TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+        TWINE_PASSWORD: ${{ secrets.TEST_PYPI_TOKEN }}
