Python3 to python

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,7 @@ jobs:
       timeout-minutes: 10
 
     - name: Publish package on PyPI
-      run: python3 -m twine upload --repository testpypi --verbose dist/*
+      run: python -m twine upload --repository testpypi --verbose dist/*
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
