--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,12 +37,20 @@ jobs:
         run: tox -e py
         continue-on-error: true
 
+      - name: Add context info to env from junit.xml and coverage.xml files
+        run: |
+          export COVERAGE=`xpath -q -e "/coverage/@line-rate * 100" coverage.xml`
+          export FAILED_AMOUNT=`xpath -q -e "number(/testsuites/testsuite/@failures)" junit.xml`
+          SKIPPED_AMOUNT=`xpath -q -e "number(/testsuites/testsuite/@skipped)" junit.xml`
+          export PASSED_AMOUNT=`xpath -q -e "/testsuites/testsuite/@tests - $SKIPPED_AMOUNT - $FAILED_AMOUNT" junit.xml`
+
       - name: Notify if test FAILED
         uses: archive/github-actions-slack@v2.0.0
         with:
           slack-bot-user-oauth-access-token: ${{ secrets.SLACK_BOT_TOKEN }}
           slack-channel: ${{ secrets.SLACK_CHANNEL_ID }}
-          slack-text: ":boom: Pycaption tests failed for Python ${{ matrix.python-version }}"
+          slack-text: ":boom: $FAILED_AMOUNT Pycaption tests failed for Python ${{ matrix.python-version }} covering $COVERAGE% of code on the ${{ github.ref_name }} branch (triggered by ${{ github.actor }})"
+          slack-optional-icon_emoji: ":boom:"
         if: steps.tests.outcome == 'failure'
 
       - name: Mark test failure
@@ -54,5 +62,6 @@ jobs:
         with:
           slack-bot-user-oauth-access-token: ${{ secrets.SLACK_BOT_TOKEN }}
           slack-channel: ${{ secrets.SLACK_CHANNEL_ID }}
-          slack-text: ":rocket: Pycaption tests passed for Python ${{ matrix.python-version }}"
+          slack-text: ":rocket: All ($PASSED_AMOUNT) Pycaption tests passed for Python ${{ matrix.python-version }} covering $COVERAGE% of code on the $GITHUB_REF_NAME branch (triggered by $GITHUB_ACTOR)"
+          slack-optional-icon_emoji: ":rocket:"
         if: steps.tests.outcome == 'success'
