--- a/tox.ini
+++ b/tox.ini
@@ -5,10 +5,11 @@ envlist = py36, py37, py38, py39
 [testenv]
 deps=
     pytest>=6.2.0,<6.3
+    pytest-cov>=3.0.0,<3.1
     pytest-lazy-fixture==0.6.3
     beautifulsoup4>=4.8.1,<4.10
     lxml>=4.6.3,<4.7
     cssutils>=2.0.0,<2.4
 
 commands=
-    pytest -vvvv --junit-xml=coverage.xml
+    pytest -vvvv --color=yes --junit-xml=junit.xml --cov=pycaption --cov-report xml:coverage.xml
