OCTO-10311. Use environment variables from env context instead.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
         with:
           slack-bot-user-oauth-access-token: ${{ secrets.SLACK_BOT_TOKEN }}
           slack-channel: ${{ secrets.SLACK_CHANNEL_ID }}
-          slack-text: ":boom: $FAILED_AMOUNT Pycaption tests failed for Python ${{ matrix.python-version }} covering $COVERAGE% of code on the ${{ github.ref_name }} branch (triggered by ${{ github.actor }})"
+          slack-text: ":boom: ${{ env.FAILED_AMOUNT }} Pycaption tests failed for Python ${{ matrix.python-version }} covering ${{ env.COVERAGE }}% of code on the ${{ github.ref_name }} branch (triggered by ${{ github.actor }})"
           slack-optional-icon_emoji: ":boom:"
         if: steps.tests.outcome == 'failure'
 
@@ -63,6 +63,7 @@ jobs:
         with:
           slack-bot-user-oauth-access-token: ${{ secrets.SLACK_BOT_TOKEN }}
           slack-channel: ${{ secrets.SLACK_CHANNEL_ID }}
-          slack-text: ":rocket: All ($PASSED_AMOUNT) Pycaption tests passed for Python ${{ matrix.python-version }} covering $COVERAGE% of code on the $GITHUB_REF_NAME branch (triggered by $GITHUB_ACTOR)"
+          slack-text: ":rocket: All (${{ env.PASSED_AMOUNT }}) Pycaption tests passed for Python ${{ matrix.python-version }} covering ${{ env.COVERAGE }}% of code on the ${{ github.ref_name }} branch (triggered by ${{ github.actor }})"
           slack-optional-icon_emoji: ":rocket:"
+          slack-optional-as_user: false
         if: steps.tests.outcome == 'success'
