--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,8 +51,6 @@ jobs:
             && BRANCH='refs/heads/main' \
             || BRANCH=${{ github.head_ref || github.ref }}
           echo "BRANCH=${BRANCH#refs/*/}" >> $GITHUB_ENV
-          echo "GITHUB_REPO=$GITHUB_REPOSITORY"
-          echo "GITHUB_REPO_OWNER=$GITHUB_REPOSITORY_OWNER"
 
       - name: Notify if test FAILED
         uses: archive/github-actions-slack@v2.0.0
@@ -60,7 +58,7 @@ jobs:
           slack-bot-user-oauth-access-token: ${{ secrets.SLACK_BOT_TOKEN }}
           slack-channel: ${{ secrets.SLACK_CHANNEL_ID }}
           slack-text: ":boom: *${{ env.FAILED_AMOUNT }}* Pycaption test(s) failed for Python *${{ matrix.python-version }}* on the *${{ env.BRANCH }}* branch (triggered by *${{ github.actor }}*)"
-        if: steps.tests.outcome == 'failure' && github.repository_owner == 'pbs'
+        if: steps.tests.outcome == 'failure' && !github.event.pull_request.head.repo.fork
 
       - name: Mark test failure
         run: exit 1
@@ -72,4 +70,4 @@ jobs:
           slack-bot-user-oauth-access-token: ${{ secrets.SLACK_BOT_TOKEN }}
           slack-channel: ${{ secrets.SLACK_CHANNEL_ID }}
           slack-text: ":rocket: All (*${{ env.PASSED_AMOUNT }}*) Pycaption tests passed for Python *${{ matrix.python-version }}* covering *${{ env.COVERAGE }}%* of code on the *${{ env.BRANCH }}* branch (triggered by *${{ github.actor }}*)"
-        if: steps.tests.outcome == 'success' && github.repository_owner == 'pbs'
+        if: steps.tests.outcome == 'success' && !github.event.pull_request.head.repo.fork
