--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 include pycaption/english.pickle
 include pycaption/NotoSansDisplay-Regular.ttf
 include pycaption/NotoSansDisplay-Regular-note.ttf
+include pycaption/NotoSansSC-Regular.otf
 recursive-exclude tests *
 include README.rst requirements.txt
