--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,5 +2,8 @@ include pycaption/english.pickle
 include pycaption/NotoSansDisplay-Regular.ttf
 include pycaption/NotoSansDisplay-Regular-note.ttf
 include pycaption/NotoSansSC-Regular.otf
+include pycaption/NotoSansTC-Regular.otf
+include pycaption/NotoSansJP-Regular.otf
+include pycaption/NotoSansKR-Regular.otf
 recursive-exclude tests *
 include README.rst requirements.txt
