--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install Tox
-        run: pip install tox
+        run: pip install tox==3
       - name: Run Tox
         id: tests
         # Run tox using the version of Python in `PATH`
