--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ on:
         required: true
       SLACK_CHANNEL_ID:
         required: true
+  workflow_dispatch:
 
 jobs:
   build:
@@ -19,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9, 3.10.0]
+        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
 
     steps:
       - uses: actions/checkout@v2
@@ -30,7 +31,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install Tox
-        run: pip install tox
+        run: pip install tox==3
       - name: Run Tox
         id: tests
         # Run tox using the version of Python in `PATH`
