--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,22 +20,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
+        python-version: ["py37", "py38", "py39", "py310", "py311"]
 
     steps:
       - uses: actions/checkout@v2
 
-      - name: Setup python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Install Tox
-        run: pip install tox==3
-      - name: Run Tox
+      - name: Run Test
         id: tests
-        # Run tox using the version of Python in `PATH`
-        run: tox -e py
+        run: ./run_tests.sh test_${{ matrix.python-version }}
         continue-on-error: true
 
       - name: Add context info to env
