revert slack secrets section

--- a/.github/workflows/release_test_pypi.yml
+++ b/.github/workflows/release_test_pypi.yml
@@ -6,6 +6,9 @@ jobs:
   call-unit-tests-workflow:
     name: Run unit tests
     uses: pbs/pycaption/.github/workflows/main.yml@main
+    secrets:
+      SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+      SLACK_CHANNEL_ID: ${{ secrets.SLACK_CHANNEL_ID }}
 
   build-n-publish:
     name: Build and publish PyCaption to Test PyPI
