--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       pip install --upgrade pip;
       pip install -r test_requirements.txt;
       pip install -e .;
-      pytest -vvvv --junit-xml=junit.xml --html=test_report.html --self-contained-html --cov=pycaption --cov-report=xml:coverage.xml;
+      pytest -vvvv --color=yes --junit-xml=junit.xml --cov=pycaption --cov-report xml:coverage.xml;
       "
     volumes:
       - .:/pycaption
@@ -20,7 +20,7 @@ services:
       pip install --upgrade pip;
       pip install -r test_requirements.txt;
       pip install -e .;
-      pytest -vvvv --junit-xml=junit.xml --html=test_report.html --self-contained-html --cov=pycaption --cov-report=xml:coverage.xml;
+      pytest -vvvv --color=yes --junit-xml=junit.xml --cov=pycaption --cov-report xml:coverage.xml;
       "
     volumes:
       - .:/pycaption
@@ -32,7 +32,7 @@ services:
       pip install --upgrade pip;
       pip install -r test_requirements.txt;
       pip install -e .;
-      pytest -vvvv --junit-xml=junit.xml --html=test_report.html --self-contained-html --cov=pycaption --cov-report=xml:coverage.xml;
+      pytest -vvvv --color=yes --junit-xml=junit.xml --cov=pycaption --cov-report xml:coverage.xml;
       "
     volumes:
       - .:/pycaption
@@ -44,7 +44,7 @@ services:
       pip install --upgrade pip;
       pip install -r test_requirements.txt;
       pip install -e .;
-      pytest -vvvv --junit-xml=junit.xml --html=test_report.html --self-contained-html --cov=pycaption --cov-report=xml:coverage.xml;
+      pytest -vvvv --color=yes --junit-xml=junit.xml --cov=pycaption --cov-report xml:coverage.xml;
       "
     volumes:
       - .:/pycaption
@@ -56,7 +56,7 @@ services:
       pip install --upgrade pip;
       pip install -r test_requirements.txt;
       pip install -e .;
-      pytest -vvvv --junit-xml=junit.xml --html=test_report.html --self-contained-html --cov=pycaption --cov-report=xml:coverage.xml;
+      pytest -vvvv --color=yes --junit-xml=junit.xml --cov=pycaption --cov-report xml:coverage.xml;
       "
     volumes:
       - .:/pycaption
