--- a/.github/workflows/release_test_pypi.yml
+++ b/.github/workflows/release_test_pypi.yml
@@ -5,7 +5,7 @@ on: workflow_dispatch
 jobs:
   call-unit-tests-workflow:
     name: Run unit tests
-    uses: pbs/pycaption/.github/workflows/main.yml
+    uses: ./.github/workflows/main.yml
     secrets:
       SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
       SLACK_CHANNEL_ID: ${{ secrets.SLACK_CHANNEL_ID }}
