--- a/.github/workflows/release_test_pypi.yml
+++ b/.github/workflows/release_test_pypi.yml
@@ -37,3 +37,4 @@ jobs:
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
+        TWINE_REPOSITORY:  "testpypi"
