rename workflow to unit_tests, change project version, remove leftover bash commands and add github artifacts

--- a/.github/workflows/create_github_release.yml
+++ b/.github/workflows/create_github_release.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   call-unit-tests-workflow:
     name: Run unit tests
-    uses: pbs/pycaption/.github/workflows/main.yml@main
+    uses: pbs/pycaption/.github/workflows/unit_tests.yml@main
     secrets:
       SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
       SLACK_CHANNEL_ID: ${{ secrets.SLACK_CHANNEL_ID }}
