--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -29,12 +29,21 @@ jobs:
         id: tests
         run: |
           ./run_tests.sh test_${{ matrix.python-version }} 
-          ls -al 
         continue-on-error: true
+
+      - name: Archive production artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-report
+          path: junit.xml
+      - name: Archive code coverage results
+        uses: actions/upload-artifact@v3
+        with:
+          name: code-coverage-report
+          path: coverage.xml
 
       - name: Add context info to env
         run: |
-          ls -al 
           sudo apt-get install -y --no-install-recommends libxml-xpath-perl
           COVERAGE=`xpath -q -e "floor(/coverage/@line-rate * 100)" coverage.xml`
           FAILED_AMOUNT=`xpath -q -e "number(/testsuites/testsuite/@failures)" junit.xml`
