--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -34,13 +34,13 @@ jobs:
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: test-report-{{ matrix.python-version }}
+          name: test-report-${{ matrix.python-version }}
           path: junit.xml
 
-      - name: Archive code coverage results {{ matrix.python-version }}
+      - name: Archive code coverage results
         uses: actions/upload-artifact@v3
         with:
-          name: code-coverage-report-{{ matrix.python-version }}
+          name: code-coverage-report-${{ matrix.python-version }}
           path: coverage.xml
 
       - name: Add context info to env
