--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 include pycaption/english.pickle
 include pycaption/NotoSansDisplay-Regular.ttf
 include pycaption/NotoSansDisplay-Regular-note.ttf
+include pycaption/NotoSansArabic-Regular.ttf
 include pycaption/NotoSansCJKsc-Regular.otf
 include pycaption/NotoSansCJKtc-Regular.otf
 include pycaption/NotoSansCJKjp-Regular.otf
