OCTO-11351 remove support for python 3.8 and 3.9

--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["py38", "py39", "py310", "py311", "py312"]
+        python-version: ["py310", "py311", "py312"]
 
     steps:
       - uses: actions/checkout@v2
